redefine img path

--- a/_posts/2019-06-30-snas.md
+++ b/_posts/2019-06-30-snas.md
@@ -14,7 +14,7 @@ tags:
 ---
 
 
-# Multi-Objective Optimization to Solve Hyperparameters of Regularization 
+**Summary**: Multi-Objective Optimization to Solve Hyperparameters of Regularization in Machine Learning
 
 ## Problem Background: 
 - The objective function we want to optimize is composed of two parts -- one is the standard cross-entropy loss; the other is a regularization term to reduce overfitting. 
@@ -30,7 +30,7 @@ tags:
 - First, to deal with multi-dimensions, we need to borrow the Pareto critical points [1] concept from economics.  
 - Second,  we can solve the Pareto critical points by convex quadratic programming (qp) below,  which constructed by the Jacobian of the objective function, A. [1]
   <p align="center">
-    <img src="images/snas/qp.png" alt="qp" title="Multi-Obj QP" width="" height="" />
+    <img src="assets/media/snas/qp.png" alt="qp" title="Multi-Obj QP" width="" height="" />
   </p>
 - Third, in each batch, we replace the backward codes of PyTorch with the result solved from duality qp. (I tried both self-written duality and quadprog to solve qp)
 
@@ -43,20 +43,20 @@ The qp [1] might seems not very straightforward. So I proved that the intuition 
      For 2D objectives, we can categorize the space into 4 kinds in **Figure 3**. The half-space {-, -} is the direction we want, to decrease both objects f1 and f2.
 
       <p align="center">
-        <img src="images/snas/fig2.png" alt="half-space" title="Half Space" width="" height="" />
+        <img src="assets/media/snas/fig2.png" alt="half-space" title="Half Space" width="" height="" />
       </p>
       <p align="center">
-        <img src="images/snas/fig3.png" alt="4space" title="Four Spaces" width="" height="" />
+        <img src="assets/media/snas/fig3.png" alt="4space" title="Four Spaces" width="" height="" />
       </p>
 
   3. If we plot the gradients of all objectives, we get the triangle in **Figure 6**:  as we are approaching the Pareto critical points, the angle <-g1, -g2> would become wider.
 
      To guarantee our updated gradient always pointing to the half-space {-,-}, we choose a direction d perpendicular to -g1 + g2 = v in **Figure 8**. In a higher dimension, this direction is in line with the height of the Pyramid. The height turns out to be the vector calculated from the qp.
       <p align="center">
-        <img src="images/snas/fig6.png" alt="cone" title="Gradient Cone" width="" height="" />
+        <img src="assets/media/snas/fig6.png" alt="cone" title="Gradient Cone" width="" height="" />
       </p>
       <p align="center">
-        <img src="images/snas/fig8.png" alt="diversity" title="Diversity Plane" width="" height="" />
+        <img src="assets/media/snas/fig8.png" alt="diversity" title="Diversity Plane" width="" height="" />
       </p>
 
 
