--- a/_posts/2019-06-30-snas.md
+++ b/_posts/2019-06-30-snas.md
@@ -10,11 +10,10 @@ tags:
   - reinforcement learning
   - machine learning
   - AutoML
-  - neural architecture search (NAS)
 ---
 
 
-**Summary**: Multi-Objective Optimization to Solve Hyperparameters of Regularization in Machine Learning
+**Summary**: Multi-Objective Optimization to Solve Hyperparameters of Regularization in Machine Learning. This idea could be further implemented to multi-task learning, or deep learning/reinforcement learning that usually require tedious hyperparameter tuning. This result comes from my research on [SNAS](https://github.com/haydenz/SNAS-Series).
 
 ## Problem Background: 
 - The objective function we want to optimize is composed of two parts -- one is the standard cross-entropy loss; the other is a regularization term to reduce overfitting. 
